--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
         "react",
         "@typescript-eslint"
     ],
+    "ignorePatterns": ["react-app-env.d.ts"],
     "rules": {
         "@typescript-eslint/explicit-module-boundary-types": "off",
         "indent": ["error", 2],
